# iitc-script-distributor

./: .gitignore  Cargo.toml  README.md  config.toml.example
src/: admin.rs  config.rs  discovery.rs  git.rs  main.rs  router.rs  scripts.rs  state.rs  webhook.rs
src/admin/: auth.rs  handlers.rs  templates.rs
templates/admin/: layout.html  repo_list.html  script_edit.html  uuid_edit.html
