[package]
name = "iitc-script-distributor"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "iitc-script-distributor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["validate-request", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
minijinja = { version = "2", features = ["loader"] }
glob = "0.3"
subtle = "2"
anyhow = "1"
base64 = "0.22"
github-webhook-notification = { git = "https://github.com/KunoiSayami/github-webhook-notification.rs.git" }
argon2 = { version = "0.6.0-rc.8", features = ["zeroize"] }

[profile.release]
lto = true
panic = "abort"
